--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<html class="gr__getfans_io"><head></head><body data-gr-c-s-loaded="true">{"links":[],"new_balance":100.1504,"succ":0,"upsells":[],"failed":0,"status":"Success"}</body></html>
+<!DOCTYPE html>
+<html class="gr__getfans_io">
+	<head></head>
+	<body data-gr-c-s-loaded="true">
+		{"links":[],"new_balance":100.1504,"succ":0,"upsells":[],"failed":0,"status":"Success"}
+	</body>
+</html>
