--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Clay's Nintendo Power Collection</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" /> 
+  <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="shortcut icon" type="image/png" href="icon.png"/>
