Updated Owned List

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 			</li>
 		</ul>
 	</div>
-	<div class="issues own">
+	<div class="issues owned">
 		<ul>
 			<li class="issue-number">
 				<span>#22</span>
@@ -361,7 +361,7 @@
 			</li>
 		</ul>
 	</div>
-	<div class="issues own">
+	<div class="issues owned">
 		<ul>
 			<li class="issue-number">
 				<span>#25</span>
@@ -627,7 +627,7 @@
 			</li>
 		</ul>
 	</div>
-	<div class="issues own">
+	<div class="issues owned">
 		<ul>
 			<li class="issue-number">
 				<span>#45</span>
